[tool.poetry]
name = "happy-bank-core"
version = "0.0.1"
description = "A simple bank core app for mentoring purpose"
authors = ["JanMate <JanMate@github.com>"]

[tool.semantic_release]
version_variable = [
    "core/__init__.py:__version__",
    "pyproject.toml:version"
]
version_source="commit"
commit_version_number=true
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.poetry.dependencies]
python = "^3.8, <3.9"
toml = "^0.10.1"
Flask = "^2.0.0, <3.0"
click = "^8.0.0, <9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
flake8 = "^3.8.3"

[tool.black]
line-length = 100
target-version = ['py38']

[build-system]
requires = ["poetry>=1.1.0"]
build-backend = "poetry.masonry.api"